; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_pxa27x_udc.c_udc_set_mask_UDCCR.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_pxa27x_udc.c_udc_set_mask_UDCCR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pxa_udc = type { i32 }

@UDCCR = common dso_local global i32 0, align 4
@UDCCR_MASK_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pxa_udc*, i32)* @udc_set_mask_UDCCR to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @udc_set_mask_UDCCR(%struct.pxa_udc* %0, i32 %1) #0 {
  %3 = alloca %struct.pxa_udc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.pxa_udc* %0, %struct.pxa_udc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.pxa_udc*, %struct.pxa_udc** %3, align 8
  %7 = load i32, i32* @UDCCR, align 4
  %8 = call i32 @udc_readl(%struct.pxa_udc* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.pxa_udc*, %struct.pxa_udc** %3, align 8
  %10 = load i32, i32* @UDCCR, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @UDCCR_MASK_BITS, align 4
  %13 = and i32 %11, %12
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @UDCCR_MASK_BITS, align 4
  %16 = and i32 %14, %15
  %17 = or i32 %13, %16
  %18 = call i32 @udc_writel(%struct.pxa_udc* %9, i32 %10, i32 %17)
  ret void
}

declare dso_local i32 @udc_readl(%struct.pxa_udc*, i32) #1

declare dso_local i32 @udc_writel(%struct.pxa_udc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
